welcome.lessons.welcome.array.array123.Array123.scala.error
array123:10: error: not found: value num
    if (num(n)==2){
        ^array123:13: error: not found: value num
    if (num(n)==3){
        ^