welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
  var A:Boolean=false
  var B:Boolean=false
  var C:Boolean=false
  
  for (n<-0 to nums.length-1){
    if (nums(n)==1){
      A=true
    }
    if (num(n)==2){
      B=true
    }
    if (num(n)==3){
      C=true
    }
  }
  if (A==true && B==true && C==true){
    return true
  }
    return false
}